k8s/istio/jwt-request-authn.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-request-authn"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "example.com"
    jwksUri: "https://raw.githubusercontent.com/signed-long/jwks_host/main/jwks.json"
