k8s/istio/gateway.yml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: auth-example-gateway
spec:
  selector:
    istio: ingressgateway  # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
