k8s/istio/virtual-service.yml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-routes
  labels:
    app: istio-auth-example
spec:
  hosts:
    - "*"
  gateways:
    - auth-example-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        port:
          number: 80
        host: api-auth-flaskapp-service
  - match:
    - uri:
        prefix: /private
    - uri:
        prefix: /public
    route:
    - destination:
        port:
          number: 80
        host: api-test-flaskapp-service
