k8s/istio/authorization-policy.yml
---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "auth-policy"
  labels:
    app: istio-auth-example
spec:
  selector:
    matchLabels:
      app: istio-auth-example
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/auth/*"]
    - operation:
        paths: ["/public/*"]
  - to:
    - operation:
        paths: ["/private/*"]
    when:
    - key: request.auth.claims[iss]
      values: ["example.com"]

---

apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "auth-policy"
  labels:
    app: istio-auth-example
spec:
  selector:
    matchLabels:
      app: istio-auth-example
  jwtRules:
  - issuer: "example.com"
    jwksUri: "https://raw.githubusercontent.com/signed-long/istio-auth-example/main/jwks.json"
